--- a/index.html
+++ b/index.html
@@ -13124,7 +13124,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p><img src='./files/sources/SUSS_logo.png' height='180' width='30%'></p>
+<p><img src='files/sources/SUSS_logo.png' height='180' width='30%'></p>
 <h1>
     <center>
         Machine Learning Programming Workshop
