--- a/files/tensorflow_NL.html
+++ b/files/tensorflow_NL.html
@@ -2,6 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
+<link rel="icon" href="./files/sources/SUSS_logo.png">
 <title>10) Tensorflow & Keras (Natural Language)</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
