--- a/files/intuition2.html
+++ b/files/intuition2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head><meta charset="utf-8" />
-
+  
+<link rel="icon" href="./files/sources/SUSS_logo.png">
 <title>03) Intuition for Machine Learning 2</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
