--- a/files/linear_ex.html
+++ b/files/linear_ex.html
@@ -2,6 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
+<link rel="icon" href="./files/sources/SUSS_logo.png">
 <title>04E) Linear Regression Exercise</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
