--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head><meta charset="utf-8" />
 
-<title>0) Machine Learning Programming Workshop</title>
+<link rel="icon" href="./files/sources/SUSS_logo.png">
+<title>Machine Learning Programming Workshop</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
@@ -13108,6 +13109,7 @@ div#notebook {
         }
     });
     </script>
+
     <!-- End of mathjax configuration --></head>
 <body>
   <div tabindex="-1" id="notebook" class="border-box-sizing">
