--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <link rel="icon" href="./files/sources/SUSS_logo.png">
 <title>Machine Learning Programming Workshop</title>
 
+<meta property="og:image" content="./files/sources/SUSS_logo.png" />
+<meta property="og:type" content="website" /> 
+<meta property="og:url" content="https://www.linkedin.com/in/cheongshiuhong/" />
+<meta property="og:title" content="Machine Learning Workshop" />
+
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
