--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
 <link rel="icon" href="./files/sources/SUSS_logo.png">
 <title>Machine Learning Programming Workshop</title>
 
+<meta property='og:title' content="Machine Learning Workshop"/>
 <meta property="og:image" content="./files/sources/SUSS_logo.png" />
-<meta property="og:type" content="website" /> 
-<meta property="og:url" content="https://www.linkedin.com/in/cheongshiuhong/" />
+<meta property='og:description' content="Machine Learning Workshop Developed for the Singapore University of Social Sciences as a Teaching Assistant"/>
+<meta property='og:url' content="https://cheongshiuhong.github.io/machinelearningworkshop/" />
+<!-- <meta property="og:type" content="website" />  -->
+<!-- <meta property="og:url" content="https://www.linkedin.com/in/cheongshiuhong/" />
+<meta property="og:url" content="https://www.linkedin.com/in/cheongshiuhong/edit/position/1476237696/" /> -->
+
 <meta property="og:title" content="Machine Learning Workshop" />
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
