--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Machine Learning Programming Workshop</title>
 
 <meta property='og:title' content="Machine Learning Workshop"/>
-<meta property="og:image" content="./files/sources/SUSS_logo.png" />
+<meta property="og:image" content="https://1.bp.blogspot.com/-Anc8qVNDe_c/WT6soXiZylI/AAAAAAAAA4Q/apAQDeIxZz8WmSiTb0eJJL4xwNn_WRwnACLcB/s1600/SUSSlogo.png" />
 <meta property='og:description' content="Machine Learning Workshop Developed for the Singapore University of Social Sciences as a Teaching Assistant"/>
 <meta property='og:url' content="https://cheongshiuhong.github.io/machinelearningworkshop/" />
 <!-- <meta property="og:type" content="website" />  -->
