--- a/files/tensorflow_CV.html
+++ b/files/tensorflow_CV.html
@@ -2,7 +2,7 @@
 <html>
 <head><meta charset="utf-8" />
 
-<link rel="icon" href="./files/sources/SUSS_logo.png">
+<link rel="icon" href="./sources/SUSS_logo.png">
 <title>09) Tensorflow & Keras (Computer Vision)</title>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
