--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>Machine Learning Programming Workshop</title>
 
 <meta property='og:title' content="Machine Learning Workshop"/>
-<meta property="og:image" content="https://cheongshiuhong.github.io/machinelearningworkshop/meta_tag_image.png" />
+<meta property="og:image" content="https://portfolio.roncheong.me/media/images/ml_workshop.png" />
 <meta property='og:description' content="Machine Learning Workshop Developed for the Singapore University of Social Sciences as a Teaching Assistant"/>
 <meta property='og:url' content="https://cheongshiuhong.github.io/machinelearningworkshop/" />
 
