--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
 <title>Machine Learning Programming Workshop</title>
 
 <meta property='og:title' content="Machine Learning Workshop"/>
-<meta property="og:image" content="https://portfolio.roncheong.me/media/images/ml_workshop.png" />
+<meta property="og:image" content="https://portfolio.roncheong.me/media/images/ml_workshop.png" alt="Machine Learning Workshop Materials" />
 <meta property='og:description' content="Machine Learning Workshop Developed for the Singapore University of Social Sciences as a Teaching Assistant"/>
 <meta property='og:url' content="https://cheongshiuhong.github.io/machinelearningworkshop/" />
-
-<meta property="og:title" content="Machine Learning Workshop" />
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
